Before Updating Metrics

--- a/env_llms_cpu.yaml
+++ b/env_llms_cpu.yaml
@@ -19,3 +19,4 @@ dependencies:
       - pydantic               # OPTIONAL
       - pypdf                  # OPTIONAL (cocopipe)
       - pillow                 # OPTIONAL (cocopipe)
+      - pypdf2
