--- a/env_llms_gpu.yaml
+++ b/env_llms_gpu.yaml
@@ -20,3 +20,4 @@ dependencies:
       - pydantic               # OPTIONAL
       - pypdf                  # OPTIONAL
       - pillow                 # OPTIONAL
+      - pypdf2                 # OPTIONAL
