--- a/xpipe/configs/experiment_rag.yaml
+++ b/xpipe/configs/experiment_rag.yaml
@@ -12,11 +12,11 @@ retriever:
 prompt:
   budget_tokens: 900         # total input tokens (before generation)
   ctx_per_doc_tokens: 300    # max tokens per retrieved doc
-  
+
 # Stage → model mapping (models.yaml provides handles)
 llms:
   synthesize:
-    model: hf/gpt2         # or hf/distilgpt2 | ollama/llama3.2:3b | ollama/qwen2.5:3b
+    model: hf/gpt2           # or hf/distilgpt2 | ollama/llama3.2:3b | ollama/qwen2.5:3b
     params:
       max_new_tokens: 160
       temperature: 0.1
@@ -25,12 +25,15 @@ llms:
 dataset:
   path: datasets/tbmp_2024/chunks.jsonl   # produced by scripts/build_tbmp_dataset.py
 
-# Demo queries (kept in config)
+# Demo queries WITH references (used for ROUGE-L, token-F1, correctness, ECE)
 queries:
   - id: q1
     text: "What is the role of a motion to compel in TTAB discovery?"
+    ref:  "A motion to compel asks the Board to order a party to provide required discovery responses or disclosures that were not served, incomplete, or inadequate."
+
   - id: q2
     text: "When are sanctions appropriate relative to motions to compel?"
+    ref:  "Sanctions may be considered if a party fails to comply with discovery obligations or a Board order (including an order granting a motion to compel), or otherwise abuses discovery."
 
 # Optional explicit output paths (else auto-named)
 outputs:
