--- a/env_llms_gpu.yaml
+++ b/env_llms_gpu.yaml
@@ -21,3 +21,4 @@ dependencies:
       - pypdf                  # OPTIONAL
       - pillow                 # OPTIONAL
       - pypdf2                 # OPTIONAL
+      - streamlit
